kubernetes/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-boot-web
spec:
  host: spring-boot-web # serviceを指定
  subsets: # service配下のPodをラベル指定でsubsetにまとめる
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
