kubernetes/istio/virtualservice-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-web
spec:
  hosts: # リクエスト先のホスト名を指定（IP,FQDN,service）
  - "*"
  gateways: # Gatewayとバインド(外部からのトラフィックに対して適用する場合)
  - spring-gateway
  http:
  - match:
    - uri:
        prefix: /
    route: # URIパターンに一致した時のルーティング
    - destination: # 転送先にk8sサービスを指定
        host: spring-boot-web 
        # port:
        #   number: 8080
