kubernetes/istio/virtualservice-v1v2-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-web
spec:
  hosts: # リクエスト先のホスト名を指定（IP,FQDN,service）
  - "*" # 全てのリクエストに対してルーティングを適用
  gateways: # Gatewayとバインド(外部からのトラフィックに対して適用する場合)
  - spring-gateway
  http:
  - match:
    - uri:
        prefix: /
    route: # URIパターンに一致した時のルーティング
    - destination: # 転送先にk8sサービス名を指定
        host: spring-boot-web-v1
      weight: 80
    - destination: # 転送先にk8sサービス名を指定
        host: spring-boot-web-v2
      weight: 20
